@@ -9,7 +9,11 @@ Release 0.0.6pre:
 - Removed include si.c
 - Changed docodeText2 to use code from vdr which also handles charset override
 - Removed some gotos
+- Removed some code duplication
+- Removed some todos
+- moved Premiere code in separate method
 - Added setup option to display message after finish of writing epg
+- Added Dish Network and Bell ExpressVU support, thanks to the VDR patch, Mrgandalf and VDR User
 
 
 Release 0.0.5:
